[activity stream] update activity stream

--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -26,3 +26,15 @@
     .stream-item-bottom
       height: 100px
       @include boxsizing
+
+      .stream-item-comment
+        position: relative
+        .stream-item-comment-user
+          position: absolute
+          top: 0px
+          left: 0px
+          img
+            width: 30px
+        .stream-item-comment-content
+          text-align: left
+          padding-left: 40px
