[activity stream] updates

--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -27,14 +27,14 @@
       height: 100px
       @include boxsizing
 
-      .stream-item-comment
+      .stream-item-media1
         position: relative
-        .stream-item-comment-user
+        .stream-item-media1-user
           position: absolute
           top: 0px
           left: 0px
           img
             width: 30px
-        .stream-item-comment-content
+        .stream-item-media1-content
           text-align: left
           padding-left: 40px
