--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -24,10 +24,11 @@
                         = image_tag filepicker_media_box_image(media_object.image_id)
                     .stream-item-bottom
                       %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                      .stream-item-comment
-                        .stream-item-comment-user
-                          = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
-                        .stream-item-comment-content
+                      .stream-item-media1
+                        .stream-item-media1-user
+                          = link_to user_profile_path(group_events.first.trackable.user) do
+                            = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
+                        .stream-item-media1-content
                           = "#{group_events.first.trackable.user.name} said, '#{group_events.first.trackable.content}'"
 
                 - when ['Comment','received_create']
@@ -42,10 +43,11 @@
                         = image_tag filepicker_media_box_image(media_object.image_id)
                     .stream-item-bottom
                       %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                      .stream-item-comment
-                        .stream-item-comment-user
-                          = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
-                        .stream-item-comment-content
+                      .stream-item-media1
+                        .stream-item-media1-user
+                          = link_to user_profile_path(group_events.first.trackable.user) do
+                            = image_tag filepicker_circle_image(group_events.first.trackable.user.image_id)
+                        .stream-item-media1-content
                           = "#{group_events.first.trackable.user.name} said, '#{group_events.first.trackable.content}'"
 
                 - when ['Course','enroll']
@@ -102,4 +104,9 @@
                         = image_tag filepicker_media_box_image(media_object.image_id)
                     .stream-item-bottom
                       %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                      %p= "#{group_events.first.user.name} uploaded this photo."
+                      .stream-item-media1
+                        .stream-item-media1-user
+                          = link_to user_profile_path(group_events.first.user) do
+                            = image_tag filepicker_circle_image(group_events.first.user.image_id)
+                        .stream-item-media1-content
+                          = "#{group_events.first.user.name} uploaded this photo."
