--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -104,7 +104,32 @@
                         = image_tag filepicker_media_box_image(media_object.image_id)
                     .stream-item-bottom
                       %p= "#{time_ago_in_words(group_events.first.created_at)} ago"
-                      %p= "#{media_object.likes_count} people liked this."
+                      - if media_object.likes_count == 1
+                        .stream-item-media1
+                          .stream-item-media1-user
+                            = link_to user_profile_path(group_events.first.user) do
+                              = image_tag filepicker_circle_image(group_events.first.user.image_id)
+                          .stream-item-media1-content
+                            = link_to group_events.first.user.name, user_profile_path(group_events.first.user)
+                            = "liked your #{media_object.class.to_s.downcase}."
+                      - else
+                        .stream-item-media2
+                          .stream-item-media2-users
+                            - media_object.likes.each do |like|
+                              = link_to user_profile_path(like.user) do
+                                = image_tag filepicker_circle_image(like.user.image_id)
+                          .stream-item-media2-content
+                            - case media_object.likes_count
+                            - when 2
+                              = link_to media_object.likes.first.user.name, user_profile_path(media_object.likes.first.user)
+                              = "and"
+                              = link_to media_object.likes.second.user.name, user_profile_path(media_object.likes.second.user)
+                              = "liked your #{media_object.class.to_s.downcase}."
+                            - else
+                              = link_to media_object.likes.first.user.name, user_profile_path(media_object.likes.first.user)
+                              = "and"
+                              = link_to media_object.likes.second.user.name, user_profile_path(media_object.likes.second.user)
+                              = "and #{media_object.likes_count - 2} more liked your #{media_object.class.to_s.downcase}."
 
                 - when ['Upload', 'create']
                   - media_object = group_events.first.trackable
