--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -3,6 +3,20 @@
 .stream
   width: 100%
   float: left
+  @include raleway
+  position: relative
+  .stream-line
+    margin-left: 12%
+    width: 88%
+    border: 1px solid $light-gray
+    border-left: 0px
+    border-right: 0px
+    border-bottom: 0px
+    @include boxsizing
+    position: absolute
+    top: 215px
+    left: 0px
+
   .stream-item
     float: left
     width: 25%
@@ -10,20 +24,27 @@
     text-align: center
     @include boxsizing
     .stream-item-top
-      border: 1px solid gray
+      border: 1px solid $light-gray
       padding: 10px
+      margin-bottom: 50px
       @include boxsizing
+      @include transition(all 200ms)
+      &:hover
+        border: 1px solid $orange
       .stream-item-title
         h4
           margin: 0px
           overflow: hidden
           text-overflow: ellipsis
           white-space: nowrap
+          color: black
       .stream-item-subtitle
         overflow: hidden
         text-overflow: ellipsis
         white-space: nowrap
+        color: black
     .stream-item-bottom
+      margin-top: 50px
       height: 100px
       @include boxsizing
 
