--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -7,7 +7,8 @@
         .container-fluid
           .row-fluid
             .stream
-              - current_user.events.timeline.group_by{|e| e.group_name}.each do |group|
+              .stream-line
+              - current_user.events.timeline.group_by{|e| e.group_name}.take(4).each do |group|
                 - group_type = group[0][0]
                 - group_name = group[0][1]
                 - group_events = group[1]
