--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -8,7 +8,7 @@
           .row-fluid
             .stream
               .stream-line
-              - current_user.events.timeline.group_by{|e| e.group_name}.take(4).each do |group|
+              - current_user.events.stream.take(4).each do |group|
                 - group_type = group[0][0]
                 - group_name = group[0][1]
                 - group_events = group[1]
