--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -35,6 +35,8 @@
       margin-bottom: 15px
       @include boxsizing
       @include transition(all 200ms)
+      img
+        width: 100%
       .stream-item-title
         h4
           margin: 0px
@@ -78,3 +80,31 @@
     img
       width: 30px
   .stream-item-media2-content
+
+@media (max-width: 1200px)
+  .stream
+    .stream-line
+      top: 182px
+
+@media (min-width: 768px) and (max-width: 979px)
+  .stream
+    .stream-line
+      top: 162px
+
+@media (max-width: 767px)
+  .stream
+    .stream-line
+      display: none
+    .stream-item
+      width: 50%
+      .stream-item-marker
+        display: none
+
+@media (max-width: 480px)
+  .stream
+    .stream-line
+      display: none
+    .stream-item
+      width: 100%
+      .stream-item-marker
+        display: none
