[youtube] remove youtube js api too buggy

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -54,8 +54,8 @@
     = yield :popup_bottom
 
     = yield :footer
-    %script{src:'http://www.youtube.com/iframe_api'}
-    %script{src:'/assets/youtube.js'}
+    / %script{src:'http://www.youtube.com/iframe_api'}
+    / %script{src:'/assets/youtube.js'}
   / = render 'layouts/youtube'
   
   %script{src: "http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"}
